# graphics-engine

./: .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/engine/: script_system.hpp  task_system.hpp
engine/include/engine/platform/: threading.hpp
engine/include/engine/task_system/: constants.hpp
engine/source/: main.cpp  script_system.cpp  task_system.cpp
engine/source/platform/win/: threading.cpp
engine/source/win/: source.cpp
